# financial_analysis_automation

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
backend/: alembic.ini
backend/alembic/versions/: 0001_initial.py  0002_stocks.py  0003_analysis.py
backend/src/: config.py
backend/src/analysis/: processor.py  prompts.py
backend/src/api/: dependencies.py
backend/src/ingestion/: kafka_producer.py  mediastack.py  newsapi.py  rss.py  runner.py  thenewsapi.py
backend/tests/: locustfile.py  test_ingestion.py
frontend/: .env.local.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/.next/: BUILD_ID  app-build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  routes-manifest.json  trace
src/: config.py
src/analysis/: consumer.py  processor.py  store.py
src/api/: dependencies.py  main.py
src/ingestion/: base.py  kafka_producer.py  rss.py  runner.py  thenewsapi.py
src/models/: article.py  schemas.py  stock.py
src/processing/: consumer.py  llm_parser.py  prompts.py
src/research/: fetcher.py  nl_search.py  runner.py  screener.py
src/storage/: database.py  redis_client.py
tests/: conftest.py  locustfile.py  test_api.py  test_ingestion.py  test_processing.py
(+172 files in other folders)
